# lib/api-spec/openapi.yaml
@@ -652,6 +652,8 @@ components:
           type: string
         twitch_client_id:
           type: string
+        twitch_client_secret:
+          type: string
         openai_api_key:
           type: string
         gemini_api_key:
@@ -689,6 +691,8 @@ components:
         twitch_oauth_token:
           type: string
         twitch_client_id:
+          type: string
+        twitch_client_secret:
           type: string
         openai_api_key:
           type: string
